{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "SteeringWheel",
            "id": "f828b913-f594-490e-9c73-3d3c23c03e8e",
            "actions": [
                {
                    "name": "Steering",
                    "type": "Value",
                    "id": "3ac53324-17c6-462b-8a45-8fda9fb5438e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Gas",
                    "type": "Value",
                    "id": "207cb0be-2c00-4a09-8e47-29bff17d22a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Break",
                    "type": "Value",
                    "id": "dcb3fa9e-8992-43e3-a475-82cb8daf0f52",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GearBox",
                    "type": "Button",
                    "id": "ccda2a2f-299f-43b9-8327-22e5ddb9edf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "6249a0f4-e98e-4a8b-8b1d-e7997190ab6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseX",
                    "type": "Value",
                    "id": "046ebc01-466d-42ad-a47a-3b7410f39829",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseY",
                    "type": "Value",
                    "id": "e07b9e20-87d3-449e-8819-303a37bf138e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyI",
                    "type": "Button",
                    "id": "188efb5e-f71a-47b3-9b34-91d987ffefd5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eb44a87d-967e-4735-98ab-12a73949e867",
                    "path": "<HID::Thrustmaster F430 Force Feedback>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "726a5a62-8b5f-4ca9-aec6-20a0755bf5e8",
                    "path": "<HID::Thrustmaster F430 Force Feedback>/rz",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gas",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f5a0563-cdab-465b-ac38-e02ecc1daf6d",
                    "path": "<HID::Thrustmaster F430 Force Feedback>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Break",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "c25f09f7-25d4-48c7-aef7-16294a46b547",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearBox",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3ffea386-3908-465e-95cc-e2929a73c773",
                    "path": "<HID::Thrustmaster F430 Force Feedback>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearBox",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1dcebe98-123f-47be-9072-320b37b7bbbe",
                    "path": "<HID::Thrustmaster F430 Force Feedback>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearBox",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c4a14f21-7426-4bb8-ba5d-ffecf23fc2fc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50dfedc5-0d05-4ab5-9bec-8e2e63a22151",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67aa7f6e-f954-4662-8822-de441bfd1815",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c72aab0c-a1b5-4c86-ab1a-592c9b1d061e",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "a34d55a7-ecec-4c3e-8987-49d283841683",
            "actions": [
                {
                    "name": "Steering",
                    "type": "Value",
                    "id": "78477a21-9466-4c52-952b-327b019dbe2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Gas",
                    "type": "Value",
                    "id": "b231cd8c-be8d-46f9-9e90-bca929f1669d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Break",
                    "type": "Value",
                    "id": "d001a06f-bdb6-4c5e-b589-b05843842277",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GearBox",
                    "type": "Button",
                    "id": "046c6800-e5c4-49b3-b5b0-e1b281b2e6be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseRightClick",
                    "type": "Button",
                    "id": "885ff18c-77b4-4afc-b7c0-0d478a99d8b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseX",
                    "type": "Value",
                    "id": "496198d5-29b7-4d7d-b993-a1f83419dc28",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseY",
                    "type": "Value",
                    "id": "3be0ae32-ab22-44ba-9565-b2e22d424854",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "KeyI",
                    "type": "Button",
                    "id": "8c146f0b-525f-4643-8086-02b377f62538",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "61014999-aa67-42e7-bfce-9409127c7f41",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "4d1e956f-6713-41fe-b1f1-8fc8cb64a9f8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "820df9fa-9bec-4407-bcde-4674e0a27dee",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b38ad60d-712e-4652-ae30-3a357f0d253d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Gas",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "951eb78b-e5ee-498d-a925-8322443f8a2c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Break",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "b2458d56-2636-4d9f-adf1-3b988714422a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearBox",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b156a32b-5b1a-4ab4-a491-5c01b5b9d658",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearBox",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "51d1f5c8-b330-4865-b227-9d85e79c90eb",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GearBox",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "359f73fd-7f75-4c62-8006-de815ac9cd73",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71a5d857-a185-4006-98b9-0b00172bd8d6",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e76ca2c5-ffd3-4b65-865a-699ca678b3d8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseRightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c376ed89-7fe0-4eae-874a-befcc3c39608",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyI",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}